# nekomp

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/soko/ekibun/nekomp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/js/: init.js
app/src/main/cpp/: CMakeLists.txt  build.jni.sh  exec.cmd  jni_wrap.hpp
app/src/main/cpp/ffmpeg/: CMakeLists.txt  build.cmd  build.ffmpeg.sh  build.sh  ffmpeg.cmake  ffmpeg.cpp
app/src/main/cpp/quickjs/: quickjs.cmake  quickjs.cpp
app/src/main/java/soko/ekibun/ffmpeg/: AVMediaType.kt  AvCodec.kt  AvFormat.kt  AvFrame.kt  AvIO.kt  AvIOContext.kt  AvPacket.kt  AvPlayback.kt  AvStream.kt  FFPlayer.kt
app/src/main/java/soko/ekibun/ffmpeg/io/: HttpIOContext.kt
app/src/main/java/soko/ekibun/nekomp/: App.kt  HttpIO.kt  MainActivity.kt  Playback.kt
app/src/main/java/soko/ekibun/nekomp/common/: Http.kt
app/src/main/java/soko/ekibun/nekomp/engine/: JsEngine.kt
app/src/main/java/soko/ekibun/nekomp/player/: HttpIO.kt  Playback.kt
app/src/main/java/soko/ekibun/nekomp/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/soko/ekibun/quickjs/: Engine.kt  Highlight.kt  JSError.kt  JSEvalFlag.kt  JSFunction.kt  JSInvokable.kt  JSObject.kt  JSProp.kt  QuickJS.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/soko/ekibun/nekomp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
